# pyroll-ring-model-thermal

./: .gitignore  README.md  hatch.toml  latexmkrc  pyproject.toml
docs/: docs.tex  symbol_index.tex  symbols.sty  symbols.toml  task_latex.py  task_process_jinja.py  task_symbols.py
docs/img/: task_convert_svg.py
pyroll/ring_model_thermal/: __init__.py  config.py  cooling_pipe.py  profile.py  report.py  roll_pass.py  transport.py
pyroll/thermal_2d/: __init__.py  constants.py  profile.py  report.py  roll_pass.py  transport.py
tests/: test_compare_with_hwang_values.py  test_default_values.py  test_disk_htc.py  test_inhomogeneous_profile.py  test_solve.py  test_solve3.py  test_solve_disks.py  test_solve_finishing_block.py  test_solve_imf_semi_continuous_8_mm.py
tests/hwang_data/: core_temperature_hwang.csv  surface_temperature_hwang.csv
