[project]
name = "pyroll-thermal-2d"
description = "Plugin for PyRoll providing ..." # edit the description
authors = [
    { name = "Max Weiner", email = "max.weiner@imf.tu-freiberg.de" }
]
license = "BSD-3-Clause"
requires-python = ">=3.9, <4.0"
dependencies = [
    "pyroll-core @ git+https://github.com/pyroll-project/pyroll-core@disk_hooks",
    "pyroll-ring-model @ git+ssh://git@github.com/pyroll-project/pyroll-ring-model",
]

dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
