[project]
name = "pyroll-ring-model-thermal"
description = "Plugin for PyRoll providing a radial thermal approach based on the ring model."
authors = [
    { name = "Max Weiner", email = "max.weiner@imf.tu-freiberg.de" }
]
license = "BSD-3-Clause"
requires-python = ">=3.9, <4.0"
dependencies = [
    "pyroll-core ~= 2.0.0b",
    "pyroll-ring-model @ git+ssh://git@github.com/pyroll-project/pyroll-ring-model",
]

dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true